@@ -1,0 +1,8 @@
+Title: job: check now monitors the time since last start of the job, limits can be configured in WATO
+Level: 1
+Component: checks
+Version: 1.2.5i1
+Date: 1389371210
+Class: feature
+
+
