@@ -36,6 +36,7 @@
     * 0254 agent_vsphere: Make handling of spaces in hostnames of ESX configurable...
     * 0077 cmciii.psm_current, cmciii_psm_plugs, cmciii_io, cmciii.access, cmciii.temp, cmciii.can_current, cmciii.sensor, cmciii.state: new sub checks included in one new check cmcmiii superseding and improving several previous checks of the Rittal CMCIII device...
             NOTE: Please refer to the migration notes!
+    * 0078 job: check now monitors the time since last start of the job, limits can be configured in WATO
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
